[gd_scene load_steps=3 format=2]

[ext_resource path="res://effects/effect.gd" type="Script" id=1]
[ext_resource path="res://audio/554022__dodrio__pop.ogg" type="AudioStream" id=2]

[node name="Effect" type="Node2D"]
script = ExtResource( 1 )
pitch_scale_range = 0.3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -9.0

[node name="KillTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="OffsetTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="KillTimer" to="." method="_on_killTimer_timeout"]
[connection signal="timeout" from="OffsetTimer" to="." method="_on_OffsetTimer_timeout"]
